--- a/04 - Final project/bibliography.bib
+++ b/04 - Final project/bibliography.bib
@@ -77,3 +77,38 @@ note={Version 2.11, Chapter 7; Creative Commons BY-NC-SA 4.0.},
   volume={26 2},
   pages={192-6}
 }
+
+@article{Cao2015,
+abstract = {The Pareto approach to optimal experimental design simultaneously considers multiple objectives by constructing a set of Pareto optimal designs while explicitly considering trade-offs between opposing criteria. Various algorithms have been proposed to populate Pareto fronts of designs, and evaluating and comparing these fronts—and by extension the algorithms that produce them—is crucial. In this paper, we first propose a framework for comparing algorithm-generated Pareto fronts based on a refined hypervolume indicator. We then theoretically address how the choice of the reference point affects comparisons of Pareto fronts, and demonstrate that our approach is Pareto compliant. Based on our theoretical investigation, we provide rules for choosing reference points when two-dimensional Pareto fronts are compared. Because theoretical results for three-dimensional fronts are difficult to obtain, we propose an empirical rule for the three-dimensional case by making an analogy to the rules for two dimensions. We also consider the use of our procedure in evaluating the progress of a front-constructing algorithm, and illustrate our work with two examples from the literature.},
+author = {Cao, Yongtao and Smucker, Byran J and Robinson, Timothy J},
+doi = {10.1016/j.jspi.2014.12.004},
+file = {:C$\backslash$:/Users/Gustavo/SkyDrive/Academic/Library/Cao, Smucker, Robinson/Cao, Smucker, Robinson - 2015 - On using the hypervolume indicator to compare Pareto fronts Applications to multi-criteria optimal exper.pdf:pdf},
+issn = {03783758},
+journal = {Journal of Statistical Planning and Inference},
+keywords = {Pareto front,design of experiments,multi-objective optimization,point exchange},
+mendeley-groups = {Themes/Optimization},
+month = {may},
+pages = {60--74},
+title = {{On using the hypervolume indicator to compare Pareto fronts: Applications to multi-criteria optimal experimental design}},
+url = {http://www.users.miamioh.edu/smuckebj/pub{\_}2015{\_}Cao{\_}etal.pdf http://linkinghub.elsevier.com/retrieve/pii/S0378375814002006},
+volume = {160},
+year = {2015}
+}
+
+@article{Zitzler2003,
+abstract = {An important issue in multiobjective optimization is the quantitative comparison of the performance of different algorithms. In the case of multiobjective evolutionary algorithms, the outcome is usually an approximation of the Pareto-optimal set, which is denoted as an approximation set, and therefore the question arises of how to evaluate the quality of approximation sets. Most popular are methods that assign each approximation set a vector of real numbers that reflect different aspects of the quality. Sometimes, pairs of approximation sets are also considered. In this study, we provide a rigorous analysis of the limitations underlying this type of quality assessment. To this end, a mathematical framework is developed which allows one to classify and discuss existing techniques.},
+author = {Zitzler, E. and Thiele, L. and Laumanns, M. and {Da Fonseca}, C. and {Da Fonseca}, V.},
+doi = {10.1109/TEVC.2003.810758},
+file = {:C$\backslash$:/Users/Gustavo/SkyDrive/Academic/Library/Zitzler et al/Zitzler et al. - 2003 - Performance assessment of multiobjective optimizers an analysis and review.pdf:pdf},
+isbn = {1089-778X},
+issn = {1089778X},
+journal = {Evolutionary Computation, IEEE Transactions on},
+keywords = {Pareto-optimal set,approximation set,approximation theory,evolutionary algorithms,genetic algorithms,multiobjective optimization,performance assessment,quality indicator},
+mendeley-groups = {Tasks/PFC/Optimization},
+number = {2},
+pages = {117--132},
+title = {{Performance assessment of multiobjective optimizers: an analysis and review}},
+volume = {7},
+year = {2003}
+}
+
